syntax = "proto3";

option csharp_namespace = "FeedService";

package Feeds;

service Feed {
	rpc ToFeed(FeedRequest) returns (FeedReplay);
}

message FeedRequest {
	string aggregatedId = 1;
	string category = 2;
	string status = 3;
	string name = 4;
	string tag = 5;
	int32 value = 6;
}

message FeedReplay {
	string id = 1;
	string aggregatedId = 2;
	string category = 3;
	string status = 4;
	string name = 5;
	string tag = 6;
	int32 value = 7;
	string timestamp = 8;
}
